iac/vm/vnet.tf
resource "azurerm_virtual_network" "vnet" {
  name                = "ubuntu-vnet"
  location            = azurerm_resource_group.vm-rg.location
  resource_group_name = azurerm_resource_group.vm-rg.name
  address_space       = ["10.0.0.0/16"]
}

resource "azurerm_subnet" "public-subnet" {
  name                 = "vm-public-subnet"
  resource_group_name  = azurerm_resource_group.vm-rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.1.0/24"]
}

resource "azurerm_subnet" "private-subnet" {
  name                 = "vm-private-subnet"
  resource_group_name  = azurerm_resource_group.vm-rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.2.0/24"]
}
